applications/envoy/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: ui-object-registry-inf-k8s-https
      protocol: HTTPS
      hostname: "ui.object-registry.inf-k8s.net"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: ui-object-registry-inf-k8s-tls

    - name: wildcard-inf-k8s-https
      protocol: HTTPS
      hostname: "*.inf-k8s.net"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-inf-k8s-tls
    - name: inf-k8s-https
      protocol: HTTPS
      hostname: inf-k8s.net
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: inf-k8s-tls
