applications/envoy/backend.policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: gateway-backend-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
  mergeType: "StrategicMerge"
  tcpKeepalive:
    probes: 9
    idleTime: "7200s"
    interval: "75s"
